add github action build checks and badge

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # rIMPD
 
 <!-- badges: start -->
+[![R build status](https://github.com/chguiterman/rIMPD/workflows/R-CMD-check/badge.svg)](https://github.com/chguiterman/rIMPD/actions)
 <!-- badges: end -->
 
 The goal of rIMPD is to enable fast and easy exploration of publicly-available tree-ring fire history data in R
