--- a/README.Rmd
+++ b/README.Rmd
@@ -10,17 +10,19 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  out.width = "100%"
+  out.width = "100%",
+    message=FALSE,
+  warning=FALSE
 )
-library(rIMPD)
-library(sf)
-library(tidyverse)
-library(lubridate)
-library(leaflet)
-library(htmltools)
-library(mapview)
-impd_meta <- search_impd() %>%
-    st_as_sf(coords = c("longitude", "latitude"), crs=4326)
+# library(rIMPD)
+# library(sf)
+# library(tidyverse)
+# library(lubridate)
+# library(leaflet)
+# library(htmltools)
+# library(mapview)
+# impd_meta <- search_impd() %>%
+#     st_as_sf(coords = c("longitude", "latitude"), crs=4326)
 ```
 
 # rIMPD
@@ -29,49 +31,38 @@ impd_meta <- search_impd() %>%
 [![R build status](https://github.com/chguiterman/rIMPD/workflows/R-CMD-check/badge.svg)](https://github.com/chguiterman/rIMPD/actions)
 <!-- badges: end -->
 
-The goal of rIMPD is to enable fast and easy exploration of publicly-available tree-ring fire history data in R. Currently rIMPD is focused on the North American tree-ring records, but could be expanded in the future.
+The goal of rIMPD is to enable fast and easy exploration of publicly-available tree-ring fire history data in R. 
 
+Using `rIMPD`, you can discover the fire history sites across the North American continent:
+```{r}
+library(rIMPD)
+library(ggplot2)
+library(dplyr)
+library(sf)
 
-```{r, echo=FALSE}
-title <- paste0(
-  tags$b("The North American tree-ring IMPD")
-)
-cred <- paste0(
-  tags$caption(str_glue("Compiled {format(now(), '%m/%d/%Y')}"))
-)
-pops <- paste0(
-  tags$b("Site name: "), ifelse(!is.na(impd_meta$siteName),
-                                impd_meta$siteName, ""), "<br>",
-  tags$b("Study code: "), impd_meta$studyCode, "<br>",
-  tags$b("Investigators: "), impd_meta$investigators, "<br>",
-  tags$b("Timespan: "), ifelse(!is.na(impd_meta$first_year),
-                               paste0(impd_meta$first_year, "-", impd_meta$last_year),
-                               ""), "<br>",
-  tags$b("Year contributed: "), impd_meta$contr_year, "<br>",
-  tags$b("url: "), ifelse(!is.na(impd_meta$url), 
-                          impd_meta$url, "")
-)
+all_sites <- search_impd() %>% 
+    st_as_sf(coords = c("longitude", "latitude"), crs=4326) 
 
-leaflet(impd_meta) %>%
-  addControl(title, position = "topright") %>% 
-  addControl(cred, position = "bottomleft") %>% 
-  addProviderTiles(providers$Esri.WorldImagery, "Satellite") %>%
-  addProviderTiles(providers$Thunderforest.Outdoors,
-                   options = tileOptions(apikey = 'a9d0362ca8e5483a98c4653356dd7661'),
-                   group = "Topography") %>%
-  addCircleMarkers(radius = 4,
-                   fillOpacity = .2,
-                   weight = 1,
-                   fillColor = "yellow",
-                   color = "yellow",
-                   popup = pops) %>%
-  addLayersControl(
-    baseGroups = c("Satellite", "Topography"),
-    options = layersControlOptions(collapsed = FALSE)
-  ) %>%
-  fitBounds(-125, 15, -73, 51.5)
+ggplot() +
+  geom_sf(data = spData::world) +
+  geom_sf(data = all_sites, color = "purple") +
+  coord_sf(xlim=c(-165, -50), ylim=c(15, 70)) +
+  theme_void()
+
 
 ```
 
+The tree-ring data associated with each site can be obtained directly:
+```{r}
+fhx <- get_impd_fhx(all_sites[10, ]$studyCode)
+```
 
-The package is not currently on CRAN.
+and analyzed with tools from the `burnr` library, for example:
+
+```{r}
+library(burnr)
+plot_demograph(fhx, 
+               composite_rug = TRUE,
+               plot_legend = TRUE)
+```
+
